--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -54,8 +54,7 @@
 	s3ds_reticle_type 	= 1
 	ms_count 			= 2
 	ms_colors 			= scope_red, scope_green	
-	magnification 		= 1
-	
+
 ![1p78gs] 	--2.8x
 	s3ds_reticle_size 	= 3.5
 	s3ds_eye_relief 	= 2
@@ -132,6 +131,7 @@
 	s3ds_reticle_type	= 7	
 	ms_count 			= 2
 	magnification 		= 4	
+    min_magnification	= 1
 
 ![pgo7gs] --4x, RPG scope
 	s3ds_reticle_size 	= 10
@@ -147,7 +147,8 @@
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 10
-
+    min_magnification	= 3
+	
 ![1p69] --1p59, 3x-10x, picatinny, UNUSED
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 5
@@ -157,7 +158,8 @@
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 10
-		
+    min_magnification	= 3
+	
 ![wpn_addon_scope_pu] 	--3.5x
 	s3ds_reticle_size 	= 2.5
 	s3ds_eye_relief 	= 4
@@ -271,6 +273,7 @@
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red
 	magnification 		= 4	
+    min_magnification	= 1
 	
 ![spec_alt] --Dynamic, specter, Rotating Scope, 1x OR 4x, zoom_step_count = 1
 	s3ds_reticle_size 	= 4.5
@@ -280,14 +283,16 @@
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red
 	magnification 		= 4		
-
+    min_magnification	= 1
+	
 ![tac30]	--Dynamic, 1x-4x
 	s3ds_reticle_size 	= 4
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.4
 	s3ds_chroma_power	= 0.04	
 	magnification 		= 4	
-
+    min_magnification	= 1
+	
 ![p4x32] --Not Adjusted                                  		
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
@@ -334,12 +339,14 @@
 	s3ds_reticle_type	= 7
 	ms_count 			= 2
 	magnification 		= 6	
+    min_magnification	= 1
 	
 ![razorhd] --Dynamic, 1x-6x
 	s3ds_reticle_size 	= 4.1
 	s3ds_eye_relief 	= 2.3
 	s3ds_chroma_power	= 0		
 	magnification 		= 6
+    min_magnification	= 1
 	
 ![ps320] --Dynamic, Rotating Scope, 1x OR 6x, zoom_step_count = 1
 	s3ds_reticle_size 	= 4.1
@@ -350,7 +357,8 @@
 	ms_count 			= 3
 	ms_colors			= scope_black, scope_red_dim, scope_red	
 	magnification 		= 6
-
+    min_magnification	= 1
+	
 ;--------------------------------------------------------------
 ;----------------------Sniper Scopes---------------------------	
 ;--------------------------------------------------------------
@@ -361,6 +369,7 @@
 	s3ds_exit_pupil		= 0.4	
 	s3ds_ffp			= 1	
 	magnification 		= 8
+    min_magnification	= 1
 	
 ![mark8_rmr] --Dynamic, leupold, 1x-8x
 	s3ds_reticle_size 	= 4.35
@@ -368,39 +377,45 @@
 	s3ds_exit_pupil		= 0.4	
 	s3ds_ffp			= 1	
 	magnification 		= 8
+    min_magnification	= 1
 	
 ![march_f_shorty] --Dynamic, 1x-8x
 	s3ds_eye_relief 	= 4.5
 	s3ds_exit_pupil		= 0.5	
 	s3ds_chroma_power	= 0		
 	magnification 		= 8
-
+    min_magnification	= 1
+	
 ![march_f_shorty_alt] --Dynamic, 1x-8x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 4.5
 	s3ds_exit_pupil		= 0.5	
 	s3ds_chroma_power	= 0		
 	magnification 		= 8
-
+    min_magnification	= 1
+	
 ![ado]	--Dynamic, 3x-9x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 4.8	
 	s3ds_exit_pupil		= 0.55		
 	magnification 		= 9
-			
+    min_magnification	= 3
+	
 ![gauss_sight] --Dynamic, Thermal, 1x-10x, zoom_step_count = 4
 	s3ds_reticle_size 	= 5
 	s3ds_image_type 	= 2
 	s3ds_reticle_type 	= 6
 	ms_count 			= 2
 	magnification 		= 10
-
+    min_magnification	= 1
+	
 ![cortex] --Dynamic
 	s3ds_reticle_size 	= 4
 	s3ds_eye_relief 	= 6
 	s3ds_exit_pupil		= 0.9	
 	s3ds_ffp			= 1		
 	magnification 		= 12
+    min_magnification	= 1
 	
 ![marchf] --Dynamic, 3x-24x
 	s3ds_reticle_size 	= 4.9
@@ -410,7 +425,8 @@
 	ms_count 			= 2
 	ms_colors 			= scope_black, scope_red	
 	magnification 		= 24
-
+    min_magnification	= 3
+	
 ;----------------------------------------------------------------------
 
                             			                                                                                      		                                         		
